--- a/.gitmodules
+++ b/.gitmodules
@@ -40,6 +40,9 @@
 [submodule "cookbooks/openssl"]
 	path = cookbooks/openssl
 	url = git://github.com/opscode-cookbooks/openssl.git
+[submodule "cookbooks/apt"]
+	path = cookbooks/apt
+	url = git://github.com/opscode-cookbooks/apt.git
 [submodule "cookbooks/nginx"]
 	path = cookbooks/nginx
-	url = git://github.com/gchef/nginx-cookbook.git
+	url = git://github.com/opscode-cookbooks/nginx.git
