--- a/development.ini
+++ b/development.ini
@@ -8,6 +8,7 @@ kotti.includes =
 kotti.configurators =
     kotti_calendar.kotti_configure
     kotti_gallery.kotti_configure
+    kotti_tinymce.kotti_configure
     kotti_video.kotti_configure
 kotti.asset_overrides = kotti_website:kotti-overrides/
 
