Add minify command for automatic CSS/JS minification. Add "fork me on github" badge.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,15 @@
 [egg_info]
 tag_build = dev
 tag_svn_revision = true
+
+[aliases]
+dev = develop easy_install kotti_website[testing] kotti_website[development]
+minify = minify_css minify_js
+
+[minify_css]
+sources = kotti_website/static/css/*.css
+output = kotti_website/static/css/%s.min.css
+
+[minify_js]
+sources = kotti_website/static/js/*.js
+output = kotti_website/static/js/%s.min.js
