Remove most CSS and template overrides. These are now in Kotti itself (as of 0.7dev5).

--- a/development.ini
+++ b/development.ini
@@ -11,6 +11,10 @@ kotti.configurators =
     kotti_tinymce.kotti_configure
     kotti_video.kotti_configure
 kotti.asset_overrides = kotti_website:kotti-overrides/
+kotti.static.view_needed =
+    kotti.static.view_needed
+    kotti_website.static.css
+    js.forkit.forkit
 
 pyramid.reload_templates = true
 pyramid.debug_authorization = false
@@ -30,7 +34,7 @@ mail.ssl = False
 mail.keyfile = None
 mail.certfile = None
 mail.queue_path = None
-mail.default_sender = website@kotti-cms.org
+mail.default_sender = do-not-reply@kotti.pylonsproject.org
 mail.debug = False
 
 sqlalchemy.url = sqlite:///%(here)s/Kotti.db
