Remove unused add ons, use postgres in dev.

--- a/development.ini
+++ b/development.ini
@@ -6,8 +6,6 @@ kotti.secret = qwerty
 kotti.includes =
     kotti_website
 kotti.configurators =
-    kotti_calendar.kotti_configure
-    kotti_gallery.kotti_configure
     kotti_site_gallery.kotti_configure
     kotti_tinymce.kotti_configure
     kotti_video.kotti_configure
@@ -38,7 +36,7 @@ mail.queue_path = None
 mail.default_sender = do-not-reply@kotti.pylonsproject.org
 mail.debug = False
 
-sqlalchemy.url = sqlite:///%(here)s/Kotti.db
+sqlalchemy.url = postgresql://kotti_website:kotti_website@127.0.0.1/kotti_website
 
 [filter:fanstatic]
 use = egg:fanstatic#fanstatic
