--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,33 @@
-*pyc
-*egg-info
-Kotti.db
+*.egg
+*.egg-info/
+*.log
+*.manifest
+*.py[cod]
+*.so
+*.spec
+.cache
+.coverage
+.installed.cfg
+.Python
+.tox/
+__pycache__/
 bower_components
+build/
+coverage.xml
+develop-eggs/
+dist/
+docs/_build/
+downloads/
+eggs/
+env/
+htmlcov/
+lib/
+lib64/
 node_modules
+nosetests.xml
+parts/
+pip-delete-this-directory.txt
+pip-log.txt
+sdist/
+target/
+var/
