--- a/development.ini
+++ b/development.ini
@@ -1,28 +1,24 @@
 [app:kotti]
 use = egg:kotti
 
+pyramid.reload_templates = true
+pyramid.debug_templates = true
+pyramid.debug_authorization = false
+pyramid.debug_notfound = true
+pyramid.debug_routematch = false
+pyramid.includes =
+    pyramid_debugtoolbar
+    pyramid_tm
+pyramid.default_locale_name = en
+
+sqlalchemy.url = postgres://kotti_website:kotti_website@127.0.0.1/kotti_website
+#mail.default_sender = yourname@yourhost
+
+kotti.configurators =
+    kotti_tinymce.kotti_configure
+    kotti_website.kotti_configure
 kotti.site_title = Kotti
 kotti.secret = qwerty
-kotti.includes =
-    kotti_website
-kotti.configurators =
-    kotti_site_gallery.kotti_configure
-    kotti_tinymce.kotti_configure
-    kotti_video.kotti_configure
-kotti.asset_overrides = kotti_website:kotti-overrides/
-kotti.static.view_needed =
-    kotti.static.view_needed
-    kotti_website.static.css
-    js.forkit.forkit
-
-pyramid.reload_templates = true
-pyramid.debug_authorization = false
-pyramid.debug_notfound = false
-pyramid.debug_routematch = false
-pyramid.default_locale_name = en
-pyramid.includes =
-    pyramid_tm
-    pyramid_debugtoolbar
 
 mail.host = localhost
 mail.port = 25
@@ -36,8 +32,6 @@ mail.queue_path = None
 mail.default_sender = do-not-reply@kotti.pylonsproject.org
 mail.debug = False
 
-sqlalchemy.url = postgresql://kotti_website:kotti_website@127.0.0.1/kotti_website
-
 [filter:fanstatic]
 use = egg:fanstatic#fanstatic
 
@@ -50,3 +44,45 @@ pipeline =
 use = egg:waitress#main
 host = 127.0.0.1
 port = 5000
+
+[alembic]
+script_location = kotti_website:alembic
+
+# Begin logging configuration
+
+[loggers]
+keys = root, kotti_website, sqlalchemy
+
+[handlers]
+keys = console
+
+[formatters]
+keys = generic
+
+[logger_root]
+level = INFO
+handlers = console
+
+[logger_kotti_website]
+level = DEBUG
+handlers =
+qualname = kotti_website
+
+[logger_sqlalchemy]
+level = INFO
+handlers =
+qualname = sqlalchemy.engine
+# "level = INFO" logs SQL queries.
+# "level = DEBUG" logs SQL queries and results.
+# "level = WARN" logs neither.  (Recommended for production systems.)
+
+[handler_console]
+class = StreamHandler
+args = (sys.stderr,)
+level = NOTSET
+formatter = generic
+
+[formatter_generic]
+format = %(asctime)s %(levelname)-5.5s [%(name)s][%(threadName)s] %(message)s
+
+# End logging configuration
