--- a/setup.cfg
+++ b/setup.cfg
@@ -3,13 +3,22 @@ tag_build = dev
 tag_svn_revision = true
 
 [aliases]
-dev = develop easy_install kotti_website[testing] kotti_website[development]
-minify = minify_css minify_js
+dev = develop easy_install kotti[testing] kotti[development]
+docs = develop easy_install kotti[docs]
 
-[minify_css]
-sources = kotti_website/static/css/*.css
-output = kotti_website/static/css/%s.min.css
-
-[minify_js]
-sources = kotti_website/static/js/*.js
-output = kotti_website/static/js/%s.min.js
+[pytest]
+addopts =
+    --doctest-modules
+    --doctest-glob='*.txt'
+    --capture=no
+    --cov=kotti_website
+    --cov-report=term-missing
+    --cov-config .coveragerc
+    --ignore=kotti_website/templates/
+    --strict
+    --pep8
+    kotti_website/tests
+python_files = test*py
+markers =
+    user: mark test to be run as the given user
+pep8ignore = E501 E122 E123 E125 E128 E711
