Basically working gulp workflow.

--- a/development.ini
+++ b/development.ini
@@ -7,7 +7,6 @@ pyramid.debug_authorization = false
 pyramid.debug_notfound = true
 pyramid.debug_routematch = false
 pyramid.includes =
-    pyramid_debugtoolbar
     pyramid_tm
 pyramid.default_locale_name = en
 
@@ -16,6 +15,7 @@ sqlalchemy.url = postgres://kotti_website:kotti_website@127.0.0.1/kotti_website
 
 kotti.configurators =
     kotti_tinymce.kotti_configure
+    kotti_site_gallery.kotti_configure
     kotti_website.kotti_configure
 kotti.site_title = Kotti
 kotti.secret = qwerty
